Fixing space between shift details and shift menu

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Anywhere/Content/Styles/team-schedule.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Anywhere/Content/Styles/team-schedule.css
@@ -93,6 +93,7 @@
 
 .team-schedule .shift-details .label {
 	text-shadow: none;
+	margin-bottom: 10px;
 }
 .team-schedule .activity-details {
 	text-shadow: none;
